// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Breadcrumbs generates breadcrumbs correctly for /tuntematon/polku/123/123 path 1`] = `
Object {
  "/tuntematon": Object {
    "href": "/tuntematon",
    "label": "tuntematon",
    "translate": false,
  },
  "/tuntematon/polku": Object {
    "href": "/tuntematon/polku",
    "label": "polku",
    "translate": false,
  },
  "/tuntematon/polku/[sid]": Object {
    "href": "/tuntematon/polku/123",
    "label": "Testi nimi",
    "translate": false,
  },
  "/tuntematon/polku/[sid]/[pid]": Object {
    "href": "/tuntematon/polku/123/456",
    "label": "Projektin muokkaaminen",
    "translate": false,
  },
}
`;

exports[`Breadcrumbs generates breadcrumbs correctly for error page 1`] = `
Object {
  "/_error": Object {
    "href": "/_error",
    "label": "virhe",
    "translate": true,
  },
}
`;

exports[`Breadcrumbs generates breadcrumbs correctly for non-mapped /tuntematon/polku/123/123 path 1`] = `
Object {
  "/tuntematon": Object {
    "href": "/tuntematon",
    "label": "tuntematon",
    "translate": false,
  },
  "/tuntematon/polku": Object {
    "href": "/tuntematon/polku",
    "label": "polku",
    "translate": false,
  },
  "/tuntematon/polku/[sid]": Object {
    "href": "/tuntematon/polku/123",
    "label": "[sid]",
    "translate": false,
  },
  "/tuntematon/polku/[sid]/[pid]": Object {
    "href": "/tuntematon/polku/123/456",
    "label": "[pid]",
    "translate": false,
  },
}
`;

exports[`Breadcrumbs renders correctly on 'known' /yllapito/perusta path 1`] = `
<div
  className="MuiContainer-root MuiContainer-maxWidthLg css-1oqqzyl-MuiContainer-root"
>
  <nav>
    <ol
      className="flex flex-wrap vayla-paragraph my-7"
    >
      <li
        className="mr-1 truncate-ellipsis max-w-xs"
      >
        <a
          href="/yllapito"
          onClick={[Function]}
          onMouseEnter={[Function]}
        >
          Valtion liikenneväylien suunnittelu
        </a>
      </li>
      <li
        className="mr-1 truncate-ellipsis max-w-xs css-iaeou5"
      >
        <span
          className="font-bold"
        >
          Projektin perustaminen
        </span>
      </li>
    </ol>
  </nav>
</div>
`;
